[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/fonts/genbasR18.font" type="BitmapFont" id=1]
[ext_resource path="res://data/scripts/dialogue_window.gd" type="Script" id=2]
[ext_resource path="res://data/fonts/comic_bold.font" type="BitmapFont" id=3]

[node name="dialogue" type="Label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "this is the characters dialogue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Visibility" ]

[node name="name" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = -36.0
margin_right = 42.0
margin_bottom = -18.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.297546, 0.359194, 0.761719, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="gui_input" from="." to="." method="_on_dialogue_gui_input"]

[connection signal="mouse_entered" from="." to="." method="_on_dialogue_mouse_entered"]

[connection signal="mouse_entered" from="name" to="." method="_on_name_mouse_entered"]


